[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/Main_Menu/ButtonHover.png" type="Texture" id=1]
[ext_resource path="res://Interface/Main_Menu/Button.png" type="Texture" id=2]
[ext_resource path="res://Interface/Main_Menu/SaveScreen/savebuttons.tres" type="ButtonGroup" id=3]
[ext_resource path="res://Interface/Main_Menu/SaveScreen/Return.gd" type="Script" id=4]
[ext_resource path="res://Interface/Main_Menu/Opções/OptionsMenu.gd" type="Script" id=6]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 3

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = 43.5
margin_top = 36.0
margin_right = 43.5
margin_bottom = 36.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 43.5
margin_top = 36.0
margin_right = 137.5
margin_bottom = 61.0
alignment = 1
script = ExtResource( 6 )

[node name="Lights" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 216.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Lights"]
margin_top = 4.0
margin_right = 66.0
margin_bottom = 21.0
text = "Luzes"

[node name="Lights" type="CheckBox" parent="Control/VBoxContainer/Lights"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 25.0
focus_neighbour_bottom = NodePath("../../FullScreen/FullScreen")

[node name="FullScreen" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 29.0
margin_right = 216.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Control/VBoxContainer/FullScreen"]
margin_top = 4.0
margin_right = 126.0
margin_bottom = 21.0
text = "Tela Cheia"

[node name="FullScreen" type="CheckBox" parent="Control/VBoxContainer/FullScreen"]
margin_left = 130.0
margin_right = 154.0
margin_bottom = 25.0

[node name="Music" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 58.0
margin_right = 216.0
margin_bottom = 75.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Music"]
margin_right = 84.0
margin_bottom = 17.0
text = "Música"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/Music"]
margin_left = 88.0
margin_right = 216.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )

[node name="FX" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 79.0
margin_right = 216.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="Control/VBoxContainer/FX"]
margin_right = 28.0
margin_bottom = 17.0
text = "FX"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/FX"]
margin_left = 32.0
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_bottom = NodePath("../../../SaveSettings")
focus_next = NodePath("../../../SaveSettings")

[node name="Return" type="TextureButton" parent="Control"]
margin_left = -4.0
margin_top = 315.0
margin_right = 158.0
margin_bottom = 365.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../VBoxContainer/FX/HSlider")
focus_neighbour_right = NodePath("../SaveSettings")
focus_neighbour_bottom = NodePath("../VBoxContainer/Lights/Lights")
focus_next = NodePath("../VBoxContainer/Lights/Lights")
focus_previous = NodePath("../SaveSettings")
group = ExtResource( 3 )
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )
expand = true
script = ExtResource( 4 )
volta = "main_menu"

[node name="Label" type="Label" parent="Control/Return"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -8.5
margin_right = 38.0
margin_bottom = 8.5
text = "Voltar"

[node name="SaveSettings" type="TextureButton" parent="Control"]
margin_left = 143.0
margin_top = 315.0
margin_right = 305.0
margin_bottom = 365.0
focus_neighbour_left = NodePath("../Return")
focus_neighbour_top = NodePath("../VBoxContainer/FX/HSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../VBoxContainer/Lights/Lights")
focus_next = NodePath("../Return")
focus_previous = NodePath("../VBoxContainer/FX/HSlider")
group = ExtResource( 3 )
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="Control/SaveSettings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -8.5
margin_right = 39.0
margin_bottom = 8.5
text = "Salvar"

[connection signal="pressed" from="Control/VBoxContainer/Lights/Lights" to="Control/VBoxContainer" method="_on_Lights_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/FullScreen/FullScreen" to="Control/VBoxContainer" method="_on_FullScreen_pressed"]
[connection signal="drag_ended" from="Control/VBoxContainer/Music/HSlider" to="Control/VBoxContainer" method="_on_music_drag_ended"]
[connection signal="value_changed" from="Control/VBoxContainer/Music/HSlider" to="Control/VBoxContainer" method="_on_music_drag_ended"]
[connection signal="drag_ended" from="Control/VBoxContainer/FX/HSlider" to="Control/VBoxContainer" method="_on_fx_drag_ended"]
[connection signal="value_changed" from="Control/VBoxContainer/FX/HSlider" to="Control/VBoxContainer" method="_on_fx_drag_ended"]
[connection signal="pressed" from="Control/Return" to="Control/Return" method="_on_Return_pressed"]
[connection signal="pressed" from="Control/SaveSettings" to="Control/VBoxContainer" method="_on_SaveSettings_pressed"]
